force-app/main/default/objects/Field_Checklist_Item__c/Field_Checklist_Item__c.object-meta.xml
<CustomObject>
    <label>Field Checklist Item</label>
    <nameField>
        <displayFormat>FCI-{000000}</displayFormat>
        <label>Field Checklist Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>