force-app/main/default/objects/Field_Checklist_Item__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Completed Field Checklist Items</relationshipLabel>
    <relationshipName>CompletedFieldChecklistItems</relationshipName>
    <type>Lookup</type>
</CustomField>