force-app/main/default/objects/Field_Checklist_Item__c/fields/Field_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Field_Checklist__c</fullName>
    <label>Field Checklist</label>
    <referenceTo>Field_Checklist__c</referenceTo>
    <relationshipName>Field_Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>